--- a/offset_print/src/Components/Product.css
+++ b/offset_print/src/Components/Product.css
@@ -10,6 +10,7 @@
     padding: 1.2rem;
     transition: transform 0.5s;
 }
+
 .productContainer{
     display: flex;
     flex-direction: column;
@@ -41,4 +42,5 @@
     align-self: center;
     margin: 0 auto;
     padding: 0 10px;
+    font-size: 1.2rem;
 }
