--- a/offset_print/src/Components/Products.css
+++ b/offset_print/src/Components/Products.css
@@ -8,6 +8,9 @@
 .products .productsContainer{
     display: grid;
     grid-template-columns: 1fr 1fr;
-    margin: 0 2rem 6rem 2rem;
 }
 
+#bottomText{
+
+    margin: 2rem 0 6rem 0;
+}
