--- a/offset_print/src/Components/Products.css
+++ b/offset_print/src/Components/Products.css
@@ -1,13 +1,14 @@
 .products{
     display: grid;
     flex-direction: column;
-    align-items: center;
+    justify-content: center;
     margin: 1rem 0;
 }
 
 .products .productsContainer{
     display: grid;
     grid-template-columns: 1fr 1fr;
+    gap: 1rem;
 }
 
 #bottomText{
