--- a/offset_print/src/Components/Home.css
+++ b/offset_print/src/Components/Home.css
@@ -7,7 +7,7 @@
 }
 
 .topLeft{
-    padding: 1rem;
+    padding: 0 1rem;
     max-width: 55vw;
 
     text-align: justify;
@@ -15,7 +15,7 @@
 }
 
 .topRight{
-    padding: 1rem;
+    padding: 0 1rem;
     max-width: 45vw;
     align-self: center;
 }
@@ -25,11 +25,9 @@
     width: 100% ;
     border-radius: 1rem;
     filter: contrast(90%);
-    margin: 2rem 0 0 0;
 }
 
 .topLeft h1{
-    margin: 2rem 0 0 0;
     font-size: 2.2rem;
     text-align: left;
 }
