--- a/offset_print/src/Components/Contact.css
+++ b/offset_print/src/Components/Contact.css
@@ -56,7 +56,7 @@ img {
 }
 
 .middlePart .socialMediaRow {
-    margin: 2rem 0;
+    margin: 2rem 0 .6rem 0;
     background-color: #dddddd;
     height: 5rem;
     display: flex;
@@ -101,4 +101,55 @@ img {
 .iframe{
     width: 400px;
     height: 400px;
+}
+
+@media (max-width: 576px) {
+    .fbIcon, .inIcon {
+        align-self: center;
+        margin-left: 1rem;
+        margin-right: 1rem;
+        transition: box-shadow 0.5s cubic-bezier(0.25, 0.8, 0.25, 1), transform 0.5s cubic-bezier(0.25, 0.8, 0.25, 1);
+        height: 54px;
+        width: 54px;
+    }
+
+    .instaIcon {
+        align-self: center;
+        margin-left: 2rem;
+        margin-right: 2rem;
+        transition: box-shadow 0.5s cubic-bezier(0.25, 0.8, 0.25, 1), transform 0.5s cubic-bezier(0.25, 0.8, 0.25, 1);
+        width: 49px;
+        height: 49px;
+    }
+
+
+    .contactForm{
+        flex-direction: column;
+        padding: 2rem;
+        justify-content: center;
+        margin: .1rem 0;
+    }
+
+    .iframe{
+        width: 300px;
+        height: 300px;
+        margin: 2rem auto;
+    }
+
+    .middlePart .mainContainer {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .middlePart .containerLeft {
+        text-align: center;
+    }
+    .middlePart .containerRight {
+        text-align: left;
+        align-self: center;
+    }
+
+    .containerRight {
+        margin-left: 0rem;
+    }
 }
