--- a/offset_print/src/Components/Home.css
+++ b/offset_print/src/Components/Home.css
@@ -1,3 +1,6 @@
+*{
+    animation: fadeIn 300ms backwards;
+}
 
 .homeTopPart {
     display: flex;
@@ -32,10 +35,19 @@
 }
 
 .homeTopPart p {
-    font-size: 1.2rem;
+    font-size: 1.1rem;
     padding-right: 38px;
 }
 
+
+@keyframes fadeIn {
+    from{
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
 
 @media (max-width: 800px) {
     .homeTopPart {
